Refactor index.html structure and meta tags

--- a/index.html
+++ b/index.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>TaskFlow - Organizador de Tarefas</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TaskFlow</title>
+
+    <!-- CSS correto -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="container">
-    <h1>TaskFlow</h1>
+    <div class="container">
+        <h1>TaskFlow</h1>
 
-    <input type="text" id="taskInput" placeholder="Digite uma tarefa">
+        <input type="text" id="taskInput" placeholder="Digite uma tarefa">
 
-    <select id="priority">
-      <option value="Alta">Alta</option>
-      <option value="Média">Média</option>
-      <option value="Baixa">Baixa</option>
-    </select>
+        <select id="priority">
+            <option value="Alta">Alta</option>
+            <option value="Média">Média</option>
+            <option value="Baixa">Baixa</option>
+        </select>
 
-    <input type="date" id="dueDate">
+        <button onclick="addTask()">Adicionar</button>
 
-    <button onclick="addTask()">Adicionar</button>
+        <ul id="taskList"></ul>
+    </div>
 
-    <select id="filter" onchange="loadTasks()">
-      <option value="all">Todas</option>
-      <option value="pending">Pendentes</option>
-      <option value="done">Concluídas</option>
-    </select>
-
-    <ul id="taskList"></ul>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
