--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
     <input type="text" id="taskInput" placeholder="Digite uma tarefa">
 
+    <select id="priority">
+        <option value="Alta">Alta</option>
+        <option value="Média">Média</option>
+        <option value="Baixa">Baixa</option>
+    </select>
+
     <button id="addBtn">Adicionar</button>
 
     <ul id="taskList"></ul>
