Add priority selection to task input form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <input type="text" id="taskInput" placeholder="Digite uma tarefa">
 
+    <!-- PRIORIDADE (ESTAVA FALTANDO) -->
     <select id="priority">
         <option value="Alta">Alta</option>
         <option value="Média">Média</option>
