Fix input and update priority options in HTML

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 <div class="container">
     <h1>TaskFlow</h1>
 
-    <input type="text" id="taskInput" placeholder="Digite uma tarefa">
+    <input
+        type="text"
+        id="taskInput"
+        placeholder="Digite uma tarefa"
+    >
 
-    <!-- PRIORIDADE (ESTAVA FALTANDO) -->
     <select id="priority">
-        <option value="Alta">Alta</option>
-        <option value="Média">Média</option>
-        <option value="Baixa">Baixa</option>
+        <option value="alta">Alta</option>
+        <option value="média">Média</option>
+        <option value="baixa">Baixa</option>
     </select>
 
     <button id="addBtn">Adicionar</button>
