--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>TaskFlow</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>TaskFlow - Organizador de Tarefas</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="container">
+  <div class="container">
     <h1>TaskFlow</h1>
 
-    <input
-        type="text"
-        id="taskInput"
-        placeholder="Digite uma tarefa"
-    >
-
+    <input type="text" id="taskInput" placeholder="Digite uma tarefa">
+    
     <select id="priority">
-        <option value="alta">Alta</option>
-        <option value="média">Média</option>
-        <option value="baixa">Baixa</option>
+      <option value="Alta">Alta</option>
+      <option value="Média">Média</option>
+      <option value="Baixa">Baixa</option>
     </select>
 
-    <button id="addBtn">Adicionar</button>
+    <button onclick="addTask()">Adicionar</button>
 
     <ul id="taskList"></ul>
-</div>
+  </div>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
