--- a/index.html
+++ b/index.html
@@ -2,33 +2,47 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>TaskFlow - Organizador de Tarefas</title>
+  <title>TaskFlow</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="container">
-    <h1>TaskFlow</h1>
+  <div class="app">
 
-    <input type="text" id="taskInput" placeholder="Digite uma tarefa">
+    <header class="app-header">
+      TaskFlow
+    </header>
 
-    <select id="priority">
-      <option value="Alta">Alta</option>
-      <option value="Média">Média</option>
-      <option value="Baixa">Baixa</option>
-    </select>
+    <main class="app-content">
 
-    <input type="date" id="dueDate">
+      <div class="container">
 
-    <button onclick="addTask()">Adicionar</button>
+        <input type="text" id="taskInput" placeholder="Digite uma tarefa">
 
-    <select id="filter" onchange="loadTasks()">
-      <option value="all">Todas</option>
-      <option value="pending">Pendentes</option>
-      <option value="done">Concluídas</option>
-    </select>
+        <div class="row">
+          <select id="priority">
+            <option value="Alta">Alta</option>
+            <option value="Média">Média</option>
+            <option value="Baixa">Baixa</option>
+          </select>
 
-    <ul id="taskList"></ul>
+          <input type="date" id="dueDate">
+        </div>
+
+        <button onclick="addTask()">Adicionar</button>
+
+        <select id="filter" onchange="loadTasks()">
+          <option value="all">Todas</option>
+          <option value="pending">Pendentes</option>
+          <option value="done">Concluídas</option>
+        </select>
+
+        <ul id="taskList"></ul>
+
+      </div>
+
+    </main>
+
   </div>
 
   <script src="script.js"></script>
