Wrap TaskFlow in a span element

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <div class="app">
 
     <header class="app-header">
-      TaskFlow
+      <span>TaskFlow</span>
     </header>
 
     <main class="app-content">
-
       <div class="container">
 
         <input type="text" id="taskInput" placeholder="Digite uma tarefa">
@@ -40,7 +39,6 @@
         <ul id="taskList"></ul>
 
       </div>
-
     </main>
 
   </div>
@@ -48,3 +46,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
