--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 </head>
 <body>
 
+  <!-- FUNDO PARALLAX -->
+  <div class="parallax">
+    <span class="layer layer-1"></span>
+    <span class="layer layer-2"></span>
+    <span class="layer layer-3"></span>
+  </div>
+
+  <!-- APP -->
   <div class="app">
 
     <header class="app-header">
-      <span>TaskFlow</span>
+      <h1>TaskFlow</h1>
     </header>
 
     <main class="app-content">
@@ -46,4 +54,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
