--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <!-- PARALLAX BACKGROUND -->
+  <!-- FUNDO PARALLAX -->
   <div class="parallax">
     <div class="layer layer-back"></div>
     <div class="layer layer-mid"></div>
@@ -45,5 +45,4 @@
   <script src="script.js"></script>
 </body>
 </html>
-
 
