--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>TaskFlow</title>
 
+  <!-- VIEWPORT (OBRIGATÓRIO MOBILE) -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- PWA -->
   <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#0f172a">
@@ -52,7 +55,7 @@
     }
   </script>
 
-  <!-- PARALLAX SUAVE -->
+  <!-- PARALLAX SUAVE (PC + MOBILE) -->
   <script>
     const layer = document.querySelector(".parallax-layer");
 
@@ -61,6 +64,12 @@
     document.addEventListener("mousemove", e => {
       tx = (window.innerWidth / 2 - e.clientX) / 40;
       ty = (window.innerHeight / 2 - e.clientY) / 40;
+    });
+
+    document.addEventListener("touchmove", e => {
+      if (!e.touches[0]) return;
+      tx = (window.innerWidth / 2 - e.touches[0].clientX) / 40;
+      ty = (window.innerHeight / 2 - e.touches[0].clientY) / 40;
     });
 
     function animate() {
@@ -74,4 +83,5 @@
 
 </body>
 </html>
+
 
